DTSPB-4856 refactor: move lifeevents related services into dedicated package, extract AliasMapper